update mongo demo docs, add jvm argument